# aboutSHW

./: .clang-format  .gitignore  .gitmodules  README.md  test.cpp
ABI/: README.md  test.cpp
amx/: README.md  test.py
amx/csrc/: __init__.py  amx_linear.hpp  main.cpp
cuda/: README.md  basic.cu  cuda_utils.h  gemm.cu  kernel.cu  max_gflops.cu  max_membw.cu  mb_cache_test.cu  mb_compute.cu  nvprof_metrics.md  test_coherency.cu
include/: README.md  debug.hpp  jit.h  linux_perf.hpp  misc.hpp  parallel.hpp  simd_jit.hpp  simd_jit_tests.hpp  simd_jit_utils.hpp  simple_perf.hpp
jit/: README.md  jit.h  test-cpi.cpp  test-rob.cpp
linux-caps/: README.md  renice.c
lut_gemm/: CMakeLists.txt  README.md  bitnet_test.sh  fake-bitnet.py  llm-weights.py  test_lut_gemm.py  test_simd_jit.py  unittest_simd_jit.py
lut_gemm/csrc/: common.hpp  i2s.cpp  main.cpp  perf.cpp  tl1.cpp
mm-woq/: README.md  test-cpu.cpp  test.cpp
mxfp4/: README.md  bf16.hpp  find-inst.cpp  jit.h  mxformat.hpp  rounding.cpp  test-cpi.cpp  test-fma.cpp  test-hide.cpp  test-jit.cpp  test-mm.cpp  test-perf.cpp  test-tensor2D.cpp  test.cpp  utils.hpp
onednn/: basic_test.py  test.py
onednn/csrc/: CMakeLists.txt  __init__.py  main.cpp
onednn/dnnl/: __init__.py  main.cpp
opencl/: README.md  cl.cpp  cl_ops.py  common.hpp  install.cmd  install.sh  llama.py  llama_lora.py  max_gflops.cpp  requirements.txt  sdpa.cl  sdpa_gflops.cpp  setup.py  test_cl.py  test_llama.py  test_max.py  test_mm.py  test_ndrange.cpp  test_sdpa.py  test_tensor.cpp  test_xmx.cpp
opencl/benchmark/: README.md  bench.cpp  init.hpp  opencl.hpp
opencl/benchmark/ngen/: bfloat16.hpp  float16.hpp  ngen_config.hpp
opencl/cl_kernels/: GQAFirst.cl  MHAFirst.cl  index_add.cl  page_attn.cl  page_attn_opt.cl  sdpa.cl  sdpa_flashattn2.cl  sdpa_multiquery.cl  sdpa_new.cl  sdpa_opt.cl  sdpa_opt_new.cl
opencl/clops/: README.md  __init__.py  bench.py  cl.cpp  cm_sdpa_common.hpp  cm_sdpa_vlen.hpp  index_add.py  linear.py  linear_f16.py  linear_f16b1.py  linear_f16xmx.py  linear_onednn.py  linear_w4a.py  linear_w4a_cpu.py  linear_w4x.py  linear_xmx_i8.py  lora.py  mha.py  mha_cpu.py  mlp_f16xmx.py  mlp_f16xmx_repack.py  mlp_f16xmx_repack_both.py  opencl.hpp  ops.py  page_attn.py  rms_norm.py  rope.py  sage_common.hpp  sage_sdpa.hpp  sdpa_opt.py  utils.py
opencl/clops/cl/: CMakeLists.txt  __init__.py  cl.cpp  common.hpp  ops.cpp  ops_onednn.cpp
opencl/clops/cl/sycl/: rms_kernel.hpp
opencl/clops/cl/sycl/xetla/common/core/: base_types.hpp  math_general.hpp  raw_send.hpp
opencl/clops/cl/sycl/xetla/subgroup/tile/: common.hpp
opencl/clops/cl/sycl/xetla/subgroup/tile/impl/: fma_xe.hpp  payload_xe.hpp
opencl/clops/csrc/: cl.cpp  common.hpp  ops.cpp
opencl/clops/tests/: llama.py
opencl/tests/: alignment_test.py  bak.py  cm-dpas.py  cm_sgemm.py  common.hpp  debug_bak_test_lora.py  esimd.py  gemm-cl.py  load.py  lora_1st.py  mem-bw.py  moe-cm.py  moe-gate-up.py  moe-mem.py  moe.py  moe3.py  onednn-gemm.py  onegemm.py  test-cm_load.py  test_cm.py  test_dpas.py  test_elt_fuse.py  test_lora.py  test_mlp_lora.py  test_qkv_lora_fusiong.py  test_separate_lora.py  test_separate_tb.py  test_softmax_topk.py  test_subg_load.py  test_sycl_rms.py  test_xmx.py  tput.py  tput_cm.py  tput_tile.py  tune_blocking.py
opencl/tests/flashattn/: cm_dpas_xe.hpp  cm_sdpa_common.hpp  cm_sdpa_lsc.hpp  cm_sdpa_vlen.hpp  cm_sdpa_xe.hpp  cm_sdpa_xe1.hpp  cm_sdpa_xe2.hpp  cmfla.py  flash-xe.py  flash-xe1.py  flash0.py  flash1.py  flash_2nd.py  online-softmax.py  ov-sdpa.py  sage.py  test-load.py  ugemm.py
opencl/tests/gemm/: CMakeLists.txt  README.md  bit_cast.hpp  common.hpp  float16.hpp  host.cpp  kernel.cpp  kernel.hpp  tensor.hpp  test.py
opencl/tests/gemm/emu/: block2d.h
opencl/tests/grounding_dino/: msdp.py  multi_scale_deformable_attn.cl
opencl/tests/grounding_dino/ext/: CMakeLists.txt  README.md  onnx_swin.py  onnx_swin_attn.py  onnx_swin_biattn.py  onnx_swin_biattn2.py  onnx_swin_fuse_after_attn.py  onnx_swin_fuse_encoder.py  onnx_swin_fuse_pre_attn.py  onnx_swin_fuse_pretransformer.py  stub.cpp  torch_swin.py
opencl/tests/lora/: lora_mlp_fusing.py  lora_qkv_fusing.py  test_separate_lora.py
opencl/tests/moe/: moe_mlp.cl  moe_mlp_new.cl  moe_opt.cl  run_vtune.bat  runme.bat  test_moe.py  test_moe_new.py  test_moe_onednn.py
opencl/tests/moe_oss/: moe_mlp.cl  moe_mlp_base.cl  moe_opt.cl  test_moe.py  test_moe_onednn.py
opencl/tests/pageatten/: check_density.py  cm_attention_common.hpp  cm_pa_common.hpp  cm_pa_kernel.hpp  cm_sdpa_common.hpp  cm_sdpa_vlen.hpp  flashattn.py  generate_block_mask.py  pa_2nd_token.py  pa_kv_cache_update_ref.hpp  pa_nc_2nd.py  pa_u8_2nd.py  pa_u8_2nd_opt.py  test_kvcache_update.py  test_pa.py
opencl/tests/sageatten/: cm_sdpa_common.hpp  cm_sdpa_vlen.hpp  cmfla.py  cmsage1.py  sage_sdpa_common.hpp  sage_sdpa_vlen.hpp  test_sage_quan.py
opencl/tests/tput/: tput.py  tput_cm.py  tput_transposed.py
opencl/tests/x_attn/: estimate.hpp  estimate.py  find_block.hpp  pa_sdpa_prefill_prefetch.hpp  readme.md  references.py  sort.hpp  test_find_block.py  test_gemm_qk.py  test_post_proc.py  test_xattn.py  x_attn.py  xattn_find_block.hpp  xattn_gemm_qk.hpp  xattn_post_proc.hpp
opencl/tests/xattention/: estimate.hpp  estimate.py  find_block.hpp  sort.hpp  test_sort.py  test_xattn.py
opt-mha/: test-mha.cpp
perf/: README.md  chrome_tracing.hpp  linux_perf.hpp  setup.py  test-bw.cpp  test-page-fault.cpp  test-tbb-omp.py  test-torch.py  test.cpp  torch_ext.cpp
pycpp/: cjit.hpp  cjit.py  common.hpp  dei8.py  gemm.cpp  misc.hpp  profiler.cpp  pycpp.cpp  setup.py  simd.hpp  simd_jit.hpp  simd_jit.md  simd_jit.py  simd_jit_tests.hpp  simd_jit_utils.hpp  simple_perf.hpp  test.py  test_gemm.py  testwc.py  utils.py  wc.py
pycpp/pycpp/: __init__.py  __main__.py  cfunc.py
pycpp/pycpp/csrc/: brg_reg_kernels.hpp  gemm.cpp  gemm.hpp  gemm.md  perf.cpp
threading/: README.md  test-threading.cpp
tools/: README.md  hf-pipe.py  ir2py.py  memprof.py  show-lm-eval-json.py  simd_codegen.py  test-bw.cpp  test-genai.py  testLLM.py
(+6 files in other folders)
